--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.8.2",
     "dotenv": "^16.4.7",
     "lucide-react": "^0.344.0",
+    "nodemon": "^3.1.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.2",
@@ -36,5 +37,17 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2"
-  }
+  },
+  "main": "eslint.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yashwanth535/Fusion-Frontend.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/yashwanth535/Fusion-Frontend/issues"
+  },
+  "homepage": "https://github.com/yashwanth535/Fusion-Frontend#readme",
+  "description": ""
 }
